# code-covered

./: .gitignore  .polyglot-cache.json  CHANGELOG.md  Makefile  README.es.md  README.fr.md  README.hi.md  README.it.md  README.ja.md  README.md  README.pt-BR.md  README.zh.md  SCORECARD.md  SECURITY.md  SHIP_GATE.md  cli.py  coverage.xml  llms.txt  pyproject.toml
.github/workflows/: ci.yml  publish.yml  security.yml
analyzer/: __init__.py  anomaly_detector.py  coverage_gaps.py  static_analyzer.py  test_generator.py
docs/: index.md
mcp_code_covered/: __init__.py  tool.py
site/: astro.config.mjs
site/src/: site-config.ts
site/src/content/docs/handbook/: beginners.md  getting-started.md  how-it-works.md  index.md  reference.md  usage.md
tests/: test_cli.py  test_coverage_gaps.py  test_mcp_tool.py
